<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGray"
    tools:context=".ChangePwd_Activity"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        app:cardBackgroundColor="#00000000"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/cpa_account"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_acct"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/cpa_oldpwd"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cpa_account"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_olepwd"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/cpa_newpwd"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cpa_oldpwd"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_newpwd"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/cpa_checknewpwd"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/cpa_newpwd"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_newpwd2"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cpa_send"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_below="@id/cpa_checknewpwd"
                android:layout_marginVertical="10dp"
                android:background="@drawable/login_btn"
                android:text="@string/press"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wtl"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/change_pwd"
        android:textColor="@color/Lightbrown"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>