<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Article_First_Page_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabLayout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/All" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SubscriptionArticle" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/newButton"
            android:layout_width="61dp"
            android:layout_height="62dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="43dp"
            android:layout_marginBottom="37dp"
            android:src="@drawable/ic___pen"
            android:backgroundTint="@color/brown"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>