<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPwd_Fragment">

    <TextView
        android:id="@+id/for_pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wtl"
        android:gravity="center_horizontal"
        android:text="@string/forget_pwd"
        android:textColor="@color/Lightbrown"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00000000"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foregroundGravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/for_acct"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_acct"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/for_Email"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/for_acct"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/E_mail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/for_check"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_below="@id/for_Email"
                android:layout_marginVertical="10dp"
                android:background="@drawable/login_btn"
                android:text="@string/press" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>