<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddArticle_Activity"
    android:background="@color/white"
    android:windowSoftInputMode="adjustPan"
    >

    <LinearLayout
        android:id="@+id/AAA_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingVertical="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight=".10">

        <ImageView
            android:id="@+id/AAA_avatarImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/todo"
            android:src="@drawable/man"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/AAA_posterText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/user"
            android:textSize="18sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/AAA_scrollView2"
        android:layout_width="match_parent"
        android:layout_height="541dp"
        android:layout_weight=".80">

        <LinearLayout
            android:id="@+id/AAA_piclinearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <EditText
                android:id="@+id/AAA_titleEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:ems="10"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/AAA_themeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/theme"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:background="@null"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/AAA_contentEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/article"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:background="@null"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_weight=".10"
        app:cardElevation="50dp"
        android:background="#FFEDEDED">

        <ImageButton
            android:id="@+id/AAA_pictureButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginVertical="22dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_photo"
            android:contentDescription="@string/todo"
            tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

</LinearLayout>