<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwd_Fragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/wtl"
        android:gravity="center_horizontal"
        android:text="@string/reset_pwd"
        android:textColor="@color/Lightbrown"
        android:textSize="60sp"
        android:lineSpacingMultiplier="1.5"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00000000"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foregroundGravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/newpwd"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_newpwd"
                android:inputType="text"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/rpf_send"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_below="@id/checknewpwd"
                android:layout_marginVertical="10dp"
                android:background="@drawable/login_btn"
                android:text="@string/press"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/checknewpwd"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/newpwd"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/hint_newpwd2"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>