<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verification_Fragment">

    <TextView
        android:id="@+id/vf_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/perpetua_titling_mt_bold"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/Lightbrown"
        android:textSize="65sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00000000"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:foregroundGravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/vf_edittext"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edit_text_border"
                android:hint="@string/verification_hint"
                android:inputType="text"
                android:minWidth="48dp"
                android:minHeight="48dp"

                tools:ignore="SpeakableTextPresentCheck"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/vf_send"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_below="@id/vf_edittext"
                android:layout_marginVertical="10dp"
                android:background="@drawable/login_btn"
                android:text="@string/press"
                tools:ignore="TouchTargetSizeCheck" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>